--- a/style.css
+++ b/style.css
@@ -16,3 +16,36 @@ svg {
   stroke: #000;
   shape-rendering: crispEdges;
 }
+
+.d3-tip {
+  font-family: Arial;
+  font: 10px sans-serif;
+  line-height: 1;
+  font-weight: bold;
+  padding: 10px;
+  background: rgba(238, 238, 238, 0.9);
+  color: #000;
+  border-radius: 2px;
+  border: 2px solid #ccc;
+  border-color: rgba(204, 204, 204, 0.9);
+}
+
+/* Creates a small triangle extender for the tooltip */
+.d3-tip:after {
+  box-sizing: border-box;
+  display: inline;
+  font-size: 10px;
+  width: 100%;
+  line-height: 1;
+  color: rgba(204, 204, 204, 0.9);
+  content: "\25BC";
+  position: absolute;
+  text-align: center;
+}
+
+/* Style northward tooltips differently */
+.d3-tip.n:after {
+  margin: 0 0 0 0;
+  top: 100%;
+  left: 0;
+}
