Remove extra tick marks at the outside end zone corners

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@ text {
   stroke: #262626;
   shape-rendering: crispEdges;
 }
+.labels path {
+  display: none;
+}
 
 .d3-tip {
   font-family: Arial;
