Remove ticks, add infield yard lines

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,12 @@ text {
 .labels path {
   display: none;
 }
+.labels .tick line {
+  display: none;
+}
+.infield path {
+  stroke-opacity: 0.4;
+}
 
 .d3-tip {
   font-family: Arial;
